--- a/pinyougou-parent/pinyougou-pojo/pom.xml
+++ b/pinyougou-parent/pinyougou-pojo/pom.xml
@@ -6,4 +6,14 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>pinyougou-pojo</artifactId>
+  
+  	<dependencies>
+  		<!-- Jackson Json处理工具包 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+  	</dependencies>
+  
+  
 </project>
