--- a/pinyougou-parent/pom.xml
+++ b/pinyougou-parent/pom.xml
@@ -25,6 +25,7 @@
 		<security.version>3.2.3.RELEASE</security.version>		
 		<solrj.version>4.10.3</solrj.version>
 		<ik.version>2012_u6</ik.version>		
+		<jackson.version>2.4.2</jackson.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -96,6 +97,11 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>1.2.28</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javassist</groupId>
