--- a/pinyougou-parent/pinyougou-sellergoods-interface/pom.xml
+++ b/pinyougou-parent/pinyougou-sellergoods-interface/pom.xml
@@ -12,5 +12,9 @@
   		<artifactId>pinyougou-pojo</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	 	<dependency>
+	    <groupId>com.github.pagehelper</groupId>
+	    <artifactId>pagehelper</artifactId>	   
+	</dependency>
   </dependencies>
 </project>
